test/fail/UselessPrivateImport2.agda
module UselessPrivateImport2 where

private
  open import Common.Issue481ParametrizedModule Set
